# memebot2

./: .gitignore  Cargo.toml
src/: config.rs  main.rs  misc.rs
src/modules/: memes.rs  mod.rs  perms.rs  roles.rs
