[package]
name = "memebot2ep1"
version = "0.1.0"
authors = ["Dark <dark@volatile.bz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#lazy_static = "1.4.0"
log = "0.4.11"
env_logger = "0.8.1"
#rand = "0.7.3"
serenity = { version = "0.10.2", features = ["cache"] }
serde = { version = "1.0.117", features = ["derive"] }
rusqlite = "0.24.2"
tokio = { version = "1.2.0", features = ["rt-multi-thread"] }
rocket = "0.4.7"
